--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ channels-redis==3.4.0
 constantly==15.1.0
 cryptography==41.0.1
 daphne==3.0.2
-Django==4.2.1
+Django
 django-cors-headers==4.1.0
 django-filter==23.2
 djangorestframework==3.14.0
