--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ idna==3.4
 incremental==22.10.0
 Markdown==3.4.3
 msgpack==1.0.5
-numpy==1.25.0
+numpy
 opencv-python==4.7.0.68
 Pillow==9.3.0
 pyasn1==0.5.0
