--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
 pytz
-service-identity==23.1.0
+service-identity
 six==1.16.0
 sqlparse==0.4.4
 Twisted==22.10.0
